# ecommerce_project_w

./: .coverage  .gitignore  README.md  pyproject.toml
src/: __init__.py  models.py
tests/: test_models.py
